fixed nav link spacing

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -10,19 +10,21 @@ header {
 .active-nav {
     text-decoration: none;
     border: 1px solid white;
-    height: 30px;
-    width: 100px;
+    /* height: 30px; */
+    /* width: 16%; */
     border-radius: 15px;
     color: white;
     line-height: 30px;
+    padding: 2px 6px;
 }
 
 .inactive-nav {
     text-decoration: none;
     border: 1px solid black;
-    height: 30px;
-    width: 16%;
+    /* height: 30px; */
+    /* width: 16%; */
     border-radius: 15px;
     color: black;
     line-height: 30px;
+    padding: 2px 6px;
 }
